--- a/record.css
+++ b/record.css
@@ -3,6 +3,10 @@ body {
     margin: 40px; /* Added margin space on the sides */
 }
 
+iframe {
+    display: none;
+}
+
 h1 {
     color: #333;
     text-align: center; /* Centered the title */
