feat: Adds toggle for binaural beats

--- a/record.css
+++ b/record.css
@@ -12,6 +12,13 @@ h1 {
     text-align: center; /* Centered the title */
 }
 
+p#min-duration-hint {
+    display: flex;
+    justify-content: center; /* This will center the switch and label inside the switch-container */
+    align-items: center;
+    margin-bottom: 20px;
+}
+
 table {
     margin-left: auto; /* Centered the table */
     margin-right: auto;
@@ -59,4 +66,79 @@ li {
     background-color: #f7f7f7;
     padding: 10px;
     border-radius: 4px;
+}
+
+/* The switch-container for positioning the toggle and label */
+.switch-container {
+    display: flex;
+    justify-content: center; /* This will center the switch and label inside the switch-container */
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 42px; /* Width of the switch */
+  height: 24px; /* Height of the switch */
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .1s;
+  transition: .1s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .1s;
+  transition: .1s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(18px);
+  -ms-transform: translateX(18px);
+  transform: translateX(18px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 24px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+#toggleLabel {
+  margin-left: 10px;
 }
