--- a/record.css
+++ b/record.css
@@ -148,17 +148,17 @@ input:checked + .slider:before {
 }
 
 #prevButton, #nextButton {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    border-radius: 4px;
     display: flex;
+    margin-left: 24px;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 14px;
     padding: 0;
     cursor: pointer;
-    background-color: #4CAF50;
-    color: white;
+    color: gray;
     border: none;
 }
 
